<resources>
    <string name="app_name">ControlServer</string>
    <string name="connect_num">connect number:0</string>
    <string name="button_click_hint">点击开始，几秒后自动结束</string>
    <string name="button_touch_hint">keep pressing</string>
    <string name="button_start">start</string>
    <string name="button_end">结束</string>
    <string name="button_ahead">next</string>
    <string name="button_back">back</string>
    <string name="current_ip">当前ip是:</string>
    <string name="id_hint">id is:</string>
    <string name="button_id">set id</string>
    <string name="skip_hint">Jump to:</string>
    <string name="button_skip">skip</string>
</resources>