<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_connect_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/connect_num"
        />

    <TextView
        android:id="@+id/text_left_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_connect_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="30"
        />

    <TextView
        android:id="@+id/text_show"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#e6e6e6"
        android:textSize="32sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/text_left_num"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/text_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_show"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/button_click_hint"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="80dp"
        android:paddingHorizontal="120dp"
        app:layout_constraintTop_toBottomOf="@id/text_click"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/button_start"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/text_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/button_click"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/button_touch_hint"
        />

    <Button
        android:id="@+id/button_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="80dp"
        android:paddingHorizontal="120dp"
        app:layout_constraintTop_toBottomOf="@id/text_touch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/button_start"
        />

    <Button
        android:id="@+id/button_ahead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="150dp"
        app:layout_constraintTop_toBottomOf="@id/button_touch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/button_ahead"
        />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        app:layout_constraintTop_toBottomOf="@id/button_touch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/button_back"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_hint" />

        <EditText
            android:id="@+id/text_id"
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_id" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/skipLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_hint" />

        <EditText
            android:id="@+id/skip_text_id"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/skip_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_skip" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>